--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.1",
     "babel-register": "^6.3.13",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.14.1"
   }
